##
## Our Makefile.am template for Makefile.in (and eventually, Makefile)
##
## Process this with automake to generate Makefile.in (or better yet,
## use autoreconf)
##

AM_CFLAGS = -Wall
AM_CPPFLAGS = -I$(top_srcdir)/include

lib_LTLIBRARIES = keychain-pkcs11.la
dist_man8_MANS = man/keychain-pkcs11.man
check_PROGRAMS = pkcs11_test pktest

keychain_pkcs11_la_SOURCES = \
			src/keychain_pkcs11.c \
			src/debug.c \
			src/tables.c \
			src/localauth.m \
			src/tokenwatcher.m \
			src/certutil.c \
			src/ccglue.c \
			include/debug.h \
			include/keychain_pkcs11.h \
			include/localauth.h \
			include/tables.h \
			include/certutil.h \
			include/ccglue.h \
			include/mypkcs11.h \
			include/pkcs11.h \
			include/pkcs11f.h \
			include/pkcs11n.h \
			include/pkcs11t.h \
			include/tokenwatcher.h \
			#

keychain_pkcs11_la_LDFLAGS = \
			-module \
			-avoid-version \
			-export-symbols-regex '^C_' \
			-shrext ".dylib" \
			-framework Security \
			-framework LocalAuthentication \
			-framework CryptoTokenKit \
			#

##
## Sources for our test programs; only built by "make check"
##

pkcs11_test_SOURCES = \
		test/pkcs11_test.c \
		src/debug.c \
		test/pkcs11_test.h \
		include/debug.h \
		#

pktest_SOURCES = \
		test/pktest.c \
		src/debug.c \
		include/debug.h \
		#

##
## We add this here so debug.c will be compiled with a different object
## name and not conflict with the use of debug.c in the shared library.
##
pkcs11_test_CFLAGS = $(AM_CFLAGS)
pktest_CFLAGS = $(AM_CFLAGS)

##
## Extra files that need to appear in our distribution that Automake won't
## include by default
##
## Note that other files under packaging are automatically picked up
## because they are generated by autoconf
##

EXTRA_DIST = \
	README.md \
	packaging/resources/readme.rtf \
	packaging/resources/conclusion.rtf \
	#

##
## A rule to build our distribution package
##


PACKAGEBUILDDIR=/tmp/packagebuild
NOTARIZE_STATUS=/tmp/notarize-status
CLEANFILES=$(PACKAGE_NAME)-*.pkg dylib.pkg
.PHONY: packages product destdir notarize

##
## Build a destination directory for our component packages
##

destdir:
	rm -rf $(PACKAGEBUILDDIR)
	$(MAKE) install DESTDIR=$(PACKAGEBUILDDIR)
	rm -f $(PACKAGEBUILDDIR)$(libdir)/keychain-pkcs11.la
	if [ "$(APP_SIGNING_ID)" != "unknown" ]; then \
	  $(CODESIGN) --timestamp --sign "$(APP_SIGNING_ID)" --identifier "$(APP_SIGNING_ID).keychain-pkcs11.dylib" $(PACKAGEBUILDDIR)$(libdir)/keychain-pkcs11.dylib; \
	fi

##
## Build our component packages necessary for the product archive.
##
## Note that component packages themselves do not need to be signed.
## Signing of the product archive takes care of that.
##

packages: destdir
	$(PKGBUILD) \
		--root "$(PACKAGEBUILDDIR)" \
		--identifier "$(APPIDENTIFIER).dylib" \
		--install-location "/" \
		--version $(PACKAGE_VERSION) \
		dylib.pkg

product: packages packaging/distribution.xml packaging/resources/welcome.rtf
	$(PRODUCTBUILD) \
		--identifier "$(APPIDENTIFIER)" \
		--version $(PACKAGE_VERSION) \
		--resources "$(srcdir)/packaging/resources" \
		--resources "./packaging/resources" \
		--distribution "./packaging/distribution.xml" \
		$(PACKAGE_NAME)-$(PACKAGE_VERSION).pkg
	@if [ "$(INSTALLER_SIGN_CN)" != "unknown" ]; then \
		rm -f tmp-$(PACKAGE_NAME)-$(PACKAGE_VERSION).pkg; \
		set -x; \
		$(PRODUCTSIGN) \
			--timestamp \
			--sign "$(INSTALLER_SIGN_CN)" \
			$(PACKAGE_NAME)-$(PACKAGE_VERSION).pkg \
			tmp-$(PACKAGE_NAME)-$(PACKAGE_VERSION).pkg; \
		mv -f tmp-$(PACKAGE_NAME)-$(PACKAGE_VERSION).pkg \
			$(PACKAGE_NAME)-$(PACKAGE_VERSION).pkg; \
	fi

##
## Submit to the notarization service and wait for it to complete, then
## staple the package
##

notarize:
	@if [ "$(NOTARIZATION_ID)" = "unknown" -o "$(NOTARIZATION_PW)" = "unknown" ]; then \
		echo "NOTARIZATION_ID and NOTARIZATION_PW must be set for notarization support"; \
		exit 1; \
	fi
	rm -f $(NOTARIZE_STATUS)
	$(XCRUN) altool --notarize-app \
		-u "$(NOTARIZATION_ID)" \
		-p "$(NOTARIZATION_PW)" \
		--asc-provider "$(ASC_PROVIDER)" \
		--primary-bundle-id "$(APPIDENTIFIER)" \
		--output-format xml \
		-f $(PACKAGE_NAME)-$(PACKAGE_VERSION).pkg \
		> $(NOTARIZE_STATUS)
	@UUID=`$(PLBUDDY) -c "Print :notarization-upload:RequestUUID" $(NOTARIZE_STATUS)`; \
	  echo "Waiting for notarization status for request ID $$UUID"; \
	  while true; do \
	    $(XCRUN) altool \
		--notarization-info $$UUID \
		-u "$(NOTARIZATION_ID)" \
		-p "$(NOTARIZATION_PW)" \
		--output-format xml > $(NOTARIZE_STATUS); \
	    if [ $$? -ne 0 ]; then \
	      echo "altool failed"; \
	      exit 1; \
	    fi; \
	    STATUS=`$(PLBUDDY) -c "Print :notarization-info:Status" $(NOTARIZE_STATUS)`; \
	    if [ "$$STATUS" != "in progress" ]; then \
	      break; \
	    fi; \
	    sleep 10; \
	  done; \
	  if [ "$$STATUS" != "success" ]; then \
	    echo "Notarization failed, check $(NOTARIZE_STATUS) for more info"; \
	    echo "Log file URL is: "; \
	    $(PLBUDDY) -c "Print :notarization-info:LogFileURL" $(NOTARIZE_STATUS); \
	    exit 1; \
	  fi; \
	  echo "Notarization successful"
	$(XCRUN) stapler staple $(PACKAGE_NAME)-$(PACKAGE_VERSION).pkg
